dashboard/dashboard-ingress.yaml
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: kubernetes-dashboard
#  namespace: kube-system
#  annotations:
#    traefik.frontend.rule.type: pathprefixstrip
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /dashboard
#        backend:
#          serviceName: kubernetes-dashboard
#          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  rules:
  - host: dashboard.kube.com
    http:
      paths:
       - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
